[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Playing.gd" type="Script" id=1]
[ext_resource path="res://scenes/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/menu_and_display/Hud.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/map/Map.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/tabuada/Tabuada.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ghosts/Ghost.tscn" type="PackedScene" id=6]

[node name="Playing" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 725.0
margin_bottom = 821.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map" parent="." instance=ExtResource( 4 )]
position = Vector2( 55.3241, 86.1718 )

[node name="Ghosts" type="Node2D" parent="."]

[node name="Ghost" parent="Ghosts" instance=ExtResource( 6 )]
position = Vector2( 362.727, 391.941 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 360.79, 586.794 )
scale = Vector2( 0.3, 0.3 )
collision/safe_margin = 0.1

[node name="HideRight" type="ColorRect" parent="."]
margin_left = 600.0
margin_top = 377.68
margin_right = 990.0
margin_bottom = 942.68
rect_scale = Vector2( 0.136639, 0.0542359 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HideLeft" type="ColorRect" parent="."]
margin_left = 66.0
margin_top = 377.0
margin_right = 505.0
margin_bottom = 961.0
rect_scale = Vector2( 0.136639, 0.0542359 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hud" parent="." instance=ExtResource( 3 )]
margin_left = -14.1875
margin_right = -14.1875

[node name="Spawns" type="Node2D" parent="."]

[node name="Player" type="Position2D" parent="Spawns"]
position = Vector2( 361.141, 586.87 )

[node name="Ghosts" type="Position2D" parent="Spawns"]
position = Vector2( 362.634, 392.756 )

[node name="Tabuada" parent="." instance=ExtResource( 5 )]
[connection signal="ansewered" from="Player" to="." method="_on_Player_ansewered"]
[connection signal="gotHit" from="Player" to="." method="_on_Player_gotHit"]
[connection signal="justAteAPill" from="Player" to="." method="_on_Player_justAteAPill"]
[connection signal="messageHidden" from="Hud" to="." method="_on_Hud_messageHidden"]
